@@ -12,6 +12,7 @@ files
 	usr/lib/cgi-bin/mod.cgi
 	usr/lib/cgi-bin/mod/conf*/*.sh
 	usr/lib/libmodcgi.sh
+	usr/lib/mod/service.sh
 	usr/lib/mod/reg-status
 	usr/lib/mod/cgi/*.sh
 	usr/lib/mww/cgi/*.sh
