@@ -7,6 +7,7 @@ export MOD_SWAP='no'
 export MOD_SWAP_FILE=''
 export MOD_SWAP_SWAPPINESS='60'
 export MOD_CGI_WIDTH='600'
+export MOD_SHOW_MEMORY_USAGE='no'
 export MOD_MOUNTED_MAIN='no'
 export MOD_MOUNTED_SUB='no'
 export MOD_MOUNTED_UMOUNT='yes'
