@@ -4,6 +4,7 @@ check "$MOD_SHOW_FREETZ_INFO" yes:show_freetz_info
 check "$MOD_MOUNTED_MAIN" yes:mounted_main
 check "$MOD_MOUNTED_SUB" yes:mounted_sub
 check "$MOD_MOUNTED_UMOUNT" yes:mounted_umount
+check "$MOD_SHOW_MEMORY_USAGE" yes:show_memory_usage
 
 sec_begin '$(lang de:"Weboberfl&auml;che" en:"Web interface")'
 
@@ -54,6 +55,8 @@ fi
 cat << EOF
 <p><a href="/cgi-bin/skin.cgi" target="_blank">$(lang de:"Aussehen einstellen (Skins)" en:"Change look (skins)")</a></p>
 <p>$(lang de:"Breite des Hauptinhalts" en:"Width of the main content area"): <input type="text" name="cgi_width" size="4" maxlength="4" value="$(html "$MOD_CGI_WIDTH")"></p>
+<p><input type="hidden" name="show_memory_usage" value="no">
+<input id="u1" type="checkbox" name="show_memory_usage" value="yes"$show_memory_usage_chk><label for="u1">$(lang de:"Zeige Speicherverbrauch" en:"Show memory usage")</label></p>
 EOF
 
 sec_end
