@@ -1,5 +1,14 @@
 stat_begin() {
 	echo '<table class="daemons">'
+	if [ "$MOD_SHOW_MEMORY_USAGE" = yes ]; then
+cat << EOF
+<th align="left">$(lang de:"Name" en:"Name")</th>
+<th align="left">$(lang de:"Status" en:"State")</th>
+<th align="left" colspan="3">$(lang de:"Kontrolle" en:"Control")</th>
+<th align="right">VmSize</th>
+<th align="right">VmRSS</th>
+EOF
+	fi
 }
 
 STAT_SERVICE_URL=$(href mod daemons)
@@ -72,9 +81,23 @@ stat_line() {
 	if $disable; then
 		start=false; stop=false
 	fi
-	stat_button "$pkg" "$daemon" start $start
-	stat_button "$pkg" "$daemon" stop $stop
-	stat_button "$pkg" "$daemon" restart $stop
+	stat_button "$pkg" "$daemon" $(lang de:"start" en:"start") $start
+	stat_button "$pkg" "$daemon" $(lang de:"stop" en:"stop") $stop
+	stat_button "$pkg" "$daemon" $(lang de:"restart" en:"restart") $stop
+
+	if [ "$MOD_SHOW_MEMORY_USAGE" = yes ] && [ $class = running ]; then
+		pid=""
+		pidfile="$(ls /var/run/$daemon*.pid /var/run/$daemon*/*.pid -1 2>/dev/null | head -1)"
+		[ -n "$pidfile" ] && pid=$(cat "$pidfile")
+		if [ -n "$pid" ] && [ -e "/proc/$pid/status" ]; then
+			vmsize=$(cat "/proc/$pid/status" | grep "VmSize" | tr -s " " | cut -d " " -f 2)
+			[ -n "$vmsize" ] && vmsize="$vmsize kB"
+			echo "<td align='right' style='width: 75px'>$vmsize</td>"
+			vmrss=$(cat "/proc/$pid/status" | grep "VmRSS" | tr -s " " | cut -d " " -f 2)
+			[ -n "$vmrss" ] && vmrss="$vmrss kB"
+			echo "<td align='right' style='width: 75px'>$vmrss</td>"
+		fi
+	fi
 
 	echo '</tr>'
 }
