@@ -331,6 +331,7 @@ Latest changes:
       + backup & restore, firmware upgrade and Rudi-shell moved to "system"-submenu
       + added link to AVM-webinterface to "system"-submenu
     * create a support-file added
+    * memory usage at services-page added
 
 - Other stuff:
     * add reiserfs to automountable filesystems
